# advent-of-code

./: .gitignore  Cargo.toml
2021/1/: solve.hs
2021/2/: solve.hs
2021/3/: solve.hs
2021/4/: solve.hs
2021/6/: solve.c
2023/day1/src/: main.rs  part1.rs
2023/day10/src/: main.rs  part1.rs  part2.rs
2023/day11/: Cargo.toml
2023/day11/benches/: divan.rs
2023/day11/src/: main.rs  part2.rs
2023/day12/src/: part1.rs  part2.rs
2023/day14/: Cargo.toml
2023/day14/src/: main.rs
2023/day15/benches/: divan.rs
2023/day15/src/: part1.rs  part2.rs
2023/day16/: Cargo.toml
2023/day16/benches/: divan.rs
2023/day16/src/: main.rs  part1.rs  part2.rs
2023/day17/src/: part1.rs
2023/day18/: Cargo.toml
2023/day18/src/: part1.rs  part2.rs
2023/day19/: Cargo.toml
2023/day19/benches/: divan.rs
2023/day19/src/: main.rs
2023/day2/src/: main.rs  part2.rs
2023/day20/benches/: divan.rs
2023/day20/src/: main.rs  part2.rs
2023/day21/: Cargo.toml  py.py
2023/day21/benches/: divan.rs
2023/day21/src/: part2.rs
2023/day22/: Cargo.toml
2023/day22/benches/: divan.rs
2023/day22/src/: main.rs  part1.rs
2023/day3/src/: part1.rs
2023/day4/: Cargo.toml
2023/day4/benches/: divan.rs
2023/day4/src/: main.rs
2023/day5/: Cargo.toml
2023/day5/benches/: divan.rs
2023/day5/src/: main.rs  part2.rs
2023/day6/src/: part2.rs
2023/day7/src/: main.rs
2023/day8/: Cargo.toml
2023/day8/benches/: divan.rs
2023/day9/benches/: divan.rs
2024/: Cargo.toml
2024/day01/src/: part1.rs  part2.rs
2025/: Cargo.toml
2025/day01/: Cargo.toml
2025/day01/benches/: divan.rs
2025/day02/: Cargo.toml
2025/day02/src/: main.rs  part1.rs  part2.rs
2025/day03/: Cargo.toml
2025/day03/src/: main.rs  part1.rs  part2.rs
day1/: Cargo.toml
day1/src/: part2.rs
day10/: Cargo.toml
day10/benches/: divan.rs
day10/src/: part1.rs  part2.rs
day11/src/: part1.rs  part2.rs
day12/: Cargo.toml
day12/benches/: divan.rs
day12/src/: main.rs  part1.rs  part2.rs
day13/: Cargo.toml
day13/benches/: divan.rs
day13/src/: main.rs  part1.rs  part2.rs
day14/: Cargo.toml
day14/benches/: divan.rs
day14/src/: part1.rs  part2.rs
day15/: Cargo.toml
day15/src/: main.rs  part1.rs  part2.rs
day16/src/: part1.rs  part2.rs
day17/: Cargo.toml
day17/benches/: divan.rs
day17/src/: main.rs  part1.rs  part2.rs
day18/benches/: divan.rs
day18/src/: main.rs  part1.rs  part2.rs
day19/src/: part1.rs  part2.rs
day2/: Cargo.toml
day2/src/: part1.rs
day20/: Cargo.toml
day20/src/: part1.rs
day21/: Cargo.toml
day21/src/: main.rs  part1.rs
day3/: Cargo.toml
day3/src/: main.rs  part1.rs  part2.rs
day4/: Cargo.toml
day4/src/: main.rs  part1.rs  part2.rs
day5/: Cargo.toml
day5/src/: part1.rs  part2.rs
day6/: Cargo.toml
day6/benches/: divan.rs
day6/src/: main.rs  part1.rs  part2.rs
day7/: Cargo.toml
day7/benches/: divan.rs
day7/src/: main.rs  part1.rs  part2.rs
day8/src/: main.rs  part1.rs  part2.rs
day9/: Cargo.toml
day9/src/: main.rs  part1.rs  part2.rs
template/: Cargo.toml
template/benches/: divan.rs
template/src/: main.rs  part1.rs  part2.rs
