[workspace]
resolver = "2"
members = [
    "day*",
]

[workspace.dependencies]
anyhow = "1.0.75"
divan = "0.1.4"
itertools = "0.12.0"
nom = "7.1.3"
petgraph = "0.6.4"
rayon = "1.8.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.10.4"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"
