[package]
name = "day6"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
test-log = { workspace = true }

[[bench]]
name = "day6-bench"
path = "benches/divan.rs"
harness = false
