[package]
name = "day18"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dhat = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
petgraph = { workspace = true }
polygonical = "0.5.0"
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
test-log = { workspace = true }

[[bench]]
name = "day18-bench"
path = "benches/divan.rs"
harness = false

[features]
dhat-heap = []
