[package]
name = "day4"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day4-bench"
path = "benches/divan.rs"
harness = false
